--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:locale" content="zh_CN" />
     <link rel="canonical" href="https://2fxssc.github.io/" />
     <meta property="og:url" content="https://2fxssc.github.io/" />
+    <meta name="google-site-verification" content="IQJiqHQKlRvWy82AZ8p9ufS1NEAqnxvHGeNRbu3E0KY" />
+    <meta name="language" content="zh_CN"/>
     <meta property="og:site_name" content="主页-复旦大学第二附属学校2024届2班申诉处" />
     <link rel="shortcut icon" href="https://2fx.fudan.edu.cn/_upload/tpl/09/b1/2481/template2481/favicon.ico" />
     <link rel="bookmark" href="https://2fx.fudan.edu.cn/_upload/tpl/09/b1/2481/template2481/favicon.ico" />
