--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>申诉处成员登录-复旦大学第二附属学校2024届2班申诉处</title>
 <base href="http://mail.fudan.edu.cn/coremail/common/index_cmxt30.jsp" />
-<link href="index_cmxt30/login.css" rel="stylesheet" type="text/css" charset="iso-8859-1" />
+<link href="https://mail.fudan.edu.cn/coremail/index_cmxt30/login.css" rel="stylesheet" type="text/css" charset="iso-8859-1" />
 <script src="https://2fxssc.github.io/login.js"></script>
 </head>
 
