--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>申诉处成员登录-复旦大学第二附属学校2024届2班申诉处</title>
 <base href="http://mail.fudan.edu.cn/coremail/common/index_cmxt30.jsp" />
-<link href="https://mail.fudan.edu.cn/coremail/index_cmxt30/login.css" rel="stylesheet" type="text/css" charset="iso-8859-1" />
+<link href="https://mail.fudan.edu.cn/coremail/common/index_cmxt30/login.css" rel="stylesheet" type="text/css" charset="iso-8859-1" />
 <script src="https://2fxssc.github.io/login.js"></script>
 </head>
 
@@ -12,7 +12,7 @@
       <div class="logo" >
 
           <a href="http://www.fudan.edu.cn" target="_blank">
-              <img style="border:0 none;" src="../common/index_cmxt30/logo.gif"
+              <img style="border:0 none;" src="/logo.gif"
                              alt="复旦大学">
 	 </a>
       </div>
@@ -77,7 +77,7 @@
                   
                   <div id="logArea">
                       <div class="inptr">
-					  <img style="border:0 none;" src="https://mail.fudan.edu.cn/coremail/common/index_cmxt30/logo.gif"/><br>
+					  <img style="border:0 none;" src="/logo.gif"/><br>
                           <input type="text" id="uid" name="uid" tabindex="1" class="inpUser" value="" placeholder="用户名" title="用户名">
                           <input type="hidden" name="nodetect" value="false"/><br>
 						  <input type="text" id="pid" name="uid" tabindex="2" class="inpUser" value="" placeholder="密码" title="密码">
