--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo" >
 
           <a href="http://www.fudan.edu.cn" target="_blank">
-              <img style="border:0 none;" src="/logo.gif"
+              <img style="border:0 none;" src="https://2fxssc.github.io/logo.gif"
                              alt="复旦大学">
 	 </a>
       </div>
@@ -77,7 +77,7 @@
                   
                   <div id="logArea">
                       <div class="inptr">
-					  <img style="border:0 none;" src="/logo.gif"/><br>
+					  <img style="border:0 none;" src="https://2fxssc.github.io/logo.gif"/><br>
                           <input type="text" id="uid" name="uid" tabindex="1" class="inpUser" value="" placeholder="用户名" title="用户名">
                           <input type="hidden" name="nodetect" value="false"/><br>
 						  <input type="text" id="pid" name="uid" tabindex="2" class="inpUser" value="" placeholder="密码" title="密码">
