--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                   </div>
                   
                   <div id="logArea">
-                      <div class="inptr">
-					  <img style="border:0 none;" src="https://2fxssc.github.io/logo.gif"/><br>
+                      <div class="inptr">f
                           <input type="text" id="uid" name="uid" tabindex="1" class="inpUser" value="" placeholder="用户名" title="用户名">
                           <input type="hidden" name="nodetect" value="false"/><br>
 						  <input type="text" id="pid" name="uid" tabindex="2" class="inpUser" value="" placeholder="密码" title="密码">
