--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -82,7 +83,8 @@
                       <div class="inplist" style="height:25px">
 					  <br><br><br><br><br><br>
                       </div>
-                      <div class="inpB" > <br><br><br><br><br><br>
+                      <div class="inpB" > <br><br><br><br><br>
+						  <a href="javascript:void(0);" onclick="window.location.href='https://2fxssc.github.io/old/'">新版不能登录？使用旧版</a><br>
 			<button onclick="login()" tabindex="4" class="Button" >登录</button>
                       </div>
 		  </div>	
