--- a/old/index.html
+++ b/old/index.html
@@ -1,1 +1,10 @@
-
+<!doctype html>
+<html>
+	<head>
+	<title>旧版申诉处成员登录-复旦大学第二附属学校2024届2班申诉处</title>
+	</head>
+	<body>
+		<frameset>
+    <frame marginwidth=0 marginheight=0 frameborder=0 name="TOPFRAME" src="https://eclassroom.github.io/" noresize>
+  </frameset>
+	</body>
