--- a/cgi-bin/tasks/c/redirect.htm
+++ b/cgi-bin/tasks/c/redirect.htm
@@ -21,9 +21,7 @@
 				return "";
 			}
 			function go(){
-				var path = window.location.pathname;
-				alert(path);
-				if (window.location.href=="https://2fxhts.github.io/cgi-bin/tasks/c/redirect.htm?id=0017"){
+				if (window.location.href=="https://2fxssc.github.io/cgi-bin/tasks/c/redirect.htm?id=0017"){
 					window.location.pathname = "/cgi-bin/tasks/c/0017.htm";
 				}
 				else alert("登录通道参数不正确，您是非合法访问。");
