--- a/cgi-bin/tasks/c/0017.htm
+++ b/cgi-bin/tasks/c/0017.htm
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="zh_CN">
 	<head>
@@ -28,7 +29,7 @@
 				else if (cookie == "20200222") return "付晴萱";
 				else if (cookie == "20200236") return "尹梓瑜";
 				else if (cookie == "20200208") return "孟辰吉";
-				else window.location.href="https://2fxhts.github.io/cgi-bin/tasks/c/redirect.htm?id=0017";
+				else window.location.href="https://2fxssc.github.io/cgi-bin/tasks/c/redirect.htm?id=0017";
 			}
 		</script>
 	</head>
