--- a/cgi-bin/experimental/system.htm
+++ b/cgi-bin/experimental/system.htm
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="zh_CN">
 	<head>
@@ -65,7 +66,7 @@
 			}
 			function getTask(){
 				var cookie = getCookie("user");
-				if (cookie == "20200207") return "<a href='javascript:void(0);' onclick='newTask()'> + 发布任务</a><br>已发布：<br><frameset><span style='color:red'> <strong>您有一条新任务待收</strong><br> <strong>申诉人（原告）：</strong>曹可馨<br> <strong>被告人：</strong>宁东霖<br> <strong>状告内容：</strong>愿意加宁东霖好友，但是宁东霖拒绝，并发送国际友好手势。<br> <strong>发布人：</strong>刘书舟 </span><hr>发送名单：<br> <input type='checkbox'>223黄圆希&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type='checkbox'>204花子豪&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type='checkbox'>208孟辰吉&nbsp;&nbsp;&nbsp;&nbsp;<br> <input type='checkbox'>207刘书舟<input type='submit' value='本人' disabled="disabled"/>&nbsp;&nbsp;&nbsp;&nbsp;<br> <input type='checkbox'>222付晴萱&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type='checkbox'>236尹梓瑜</frameset>";
+				if (cookie == "20200207") return "<a href='javascript:void(0);' onclick='newTask()'> + 发布任务</a><br>已发布：<br><frameset><span style='color:red'> <strong>您有一条新任务待收</strong><br> <strong>申诉人（原告）：</strong>曹可馨<br> <strong>被告人：</strong>宁东霖<br> <strong>状告内容：</strong>愿意加宁东霖好友，但是宁东霖拒绝，并发送国际友好手势。<br> <strong>发布人：</strong>刘书舟 </span><hr>发送名单：<br> <input type='checkbox'>223黄圆希&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type='checkbox'>204花子豪&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type='checkbox'>208孟辰吉&nbsp;&nbsp;&nbsp;&nbsp;<br> <input type='checkbox'>207刘书舟<input type='submit' value='本人' disabled='disabled'/>&nbsp;&nbsp;&nbsp;&nbsp;<br> <input type='checkbox'>222付晴萱&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type='checkbox'>236尹梓瑜</frameset>";
 				else if (cookie == "20200223") return "<span style='color:red'> <strong>您有一条新任务待收</strong><br> <strong>申诉人（原告）：</strong>曹可馨<br> <strong>被告人：</strong>宁东霖<br> <strong>状告内容：</strong>愿意加宁东霖好友，但是宁东霖拒绝，并发送国际友好手势。<br> <strong>发布人：</strong>刘书舟 </span>";
 				else if (cookie == "20200204") return "管理员拒绝发送任务到您的账户";
 				else if (cookie == "20200222") return "<span style='color:red'> <strong>您有一条新任务待收</strong><br> <strong>申诉人（原告）：</strong>曹可馨<br> <strong>被告人：</strong>宁东霖<br> <strong>状告内容：</strong>愿意加宁东霖好友，但是宁东霖拒绝，并发送国际友好手势。<br> <strong>发布人：</strong>刘书舟 </span>";
@@ -155,7 +156,7 @@
 		<footer>
 			<center>
 				<span>&copy;2020 复旦大学第二附属学校2024届2班申诉处&nbsp;&nbsp;版权所有</span><br>
-				<a href="javascript:void(0);" onclick="alert('功能建设中……')">建议功能改进</a>
+				<a href="javascript:void(0);" onclick="alert('请在微信联系')">建议功能改进</a>
 			</center>
 		</footer>
 	</body>
