--- a/cgi-bin/experimental/member.htm
+++ b/cgi-bin/experimental/member.htm
@@ -19,7 +19,31 @@
  }  
 </style>  
 <script type="text/javascript">  
+	function setCookie(cname,cvalue,exdays){
+				var d = new Date();
+				d.setTime(d.getTime()+(exdays*24*60*60*1000));
+				var expires = "expires="+d.toGMTString();
+				document.cookie = cname+"="+cvalue+"; "+expires;
+			}function getCookie(cname){
+				var name = cname + "=";
+				var ca = document.cookie.split(';');
+				for(var i=0; i<ca.length; i++) {
+					var c = ca[i].trim();
+					if (c.indexOf(name)==0) { return c.substring(name.length,c.length); }
+				}
+				return "未检测到学号";
+			}
   function run(){  
+	if (cookie == "20200207");
+				else if (cookie == "20200223");
+				else if (cookie == "20200204");
+				else if (cookie == "20200222");
+				else if (cookie == "20200236");
+				else if (cookie == "20200208");
+				else {
+					alert("您未登录！");
+					window.location.pathname="/cgi-bin/experimental/login.htm";
+				}
         var bar = document.getElementById("bar"); 
         var total = document.getElementById("total"); 
     bar.style.width=parseInt(bar.style.width) + 1 + "%";  
