--- a/cgi-bin/experimental/system.htm
+++ b/cgi-bin/experimental/system.htm
@@ -70,7 +70,7 @@
 				else if (cookie == "20200223") return "<span style='color:red'> <strong>您有一条新任务待收</strong><br> <strong>申诉人（原告）：</strong>曹可馨<br> <strong>被告人：</strong>宁东霖<br> <strong>状告内容：</strong>愿意加宁东霖好友，但是宁东霖拒绝，并发送国际友好手势。<br> <strong>发布人：</strong>刘书舟 </span>";
 				else if (cookie == "20200204") return "管理员拒绝发送任务到您的账户";
 				else if (cookie == "20200222") return "<span style='color:red'> <strong>您有一条新任务待收</strong><br> <strong>申诉人（原告）：</strong>曹可馨<br> <strong>被告人：</strong>宁东霖<br> <strong>状告内容：</strong>愿意加宁东霖好友，但是宁东霖拒绝，并发送国际友好手势。<br> <strong>发布人：</strong>刘书舟 </span>";
-				else if (cookie == "20200236") return "管理员拒绝发送任务到您的账户";
+				else if (cookie == "20200236") return "<span style='color:red'> <strong>您有一条新任务待收</strong><br> <strong>申诉人（原告）：</strong>曹可馨<br> <strong>被告人：</strong>宁东霖<br> <strong>状告内容：</strong>愿意加宁东霖好友，但是宁东霖拒绝，并发送国际友好手势。<br> <strong>发布人：</strong>刘书舟 </span>";
 				else if (cookie == "20200208") return "<span style='color:red'> <strong>您有一条新任务待收</strong><br> <strong>申诉人（原告）：</strong>曹可馨<br> <strong>被告人：</strong>宁东霖<br> <strong>状告内容：</strong>愿意加宁东霖好友，但是宁东霖拒绝，并发送国际友好手势。<br> <strong>发布人：</strong>刘书舟 </span>";
 				else window.location.pathname="/";
 			}
