--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <noscript><iframe src="https://www.fudan.edu.cn/generate404" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
-    <a href="https://fudan.edu.cn"><img src="/fudanlogo.jpg"/></a>
+    <a href="https://fudan.edu.cn"><img src="/fudanlogo.jpg" width=250 height=156/></a>
     <p><b>404&nbsp;</b> <ins>这是一个错误。</ins></p>
     <p>被访问到的资源路径<span id="path"></span>在这个服务器上没有被我们找到。
       <ins>这就是我们所知道的一切了。</ins></p>
