--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <noscript><iframe src="https://www.fudan.edu.cn/generate404" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.fudan.edu.cn/generate404"></iframe></noscript>
 
 
     <a href="https://fudan.edu.cn"><img src="/fudanlogo.jpg" width=250 height=156/></a>
