--- a/panel/index.html
+++ b/panel/index.html
@@ -108,11 +108,14 @@
 			<legend class="lgd_norset">基本设置</legend>
 			姓名：<span id="name"></span><br>
 			学号：<span id="stuid"></span><br>
-			SSC统一身份码：<span id="sscode"></span><br>
 			<script>
 				window.onload = function(){
 					document.getElementById("name").innerHTML = "<input type='text' disabled='disabled' name='user_name' value='"+getWelcome()+"'/>";
 					document.getElementById("stuid").innerHTML = "<input type='text' disabled='disabled' name='user_id' value='"+getCookie("user")+"'/>";
-					document.getElementById("sscode").innerHTML = "<input type='text' disabled='disabled' name='ssc_code' value='"+getCode"'/>";
+					document.getElementById("sscode").innerHTML = "<input type='text' disabled='disabled' name='ssc_code' value='"+getCode()+"'/>";
 				}
 			</script>
+			SSC统一身份码：<span id="sscode"></span><br>
+		</fieldset>
+			
+			
