--- a/panel/index.html
+++ b/panel/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="zh_CN">
-	<head class="2FX API Power">
+	<head class="2FX API Powered">
 		<title>复旦大学第二附属学校2024届2班申诉处管理端</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script type="text/javascript">
 		function setCookie(cname,cvalue,exdays){
 				var d = new Date();
@@ -108,14 +109,14 @@
 			<legend class="lgd_norset">基本设置</legend>
 			姓名：<span id="name"></span><br>
 			学号：<span id="stuid"></span><br>
+			SSC统一身份码：<span id="sscode"></span><br>
 			<script>
 				window.onload = function(){
 					document.getElementById("name").innerHTML = "<input type='text' disabled='disabled' name='user_name' value='"+getWelcome()+"'/>";
 					document.getElementById("stuid").innerHTML = "<input type='text' disabled='disabled' name='user_id' value='"+getCookie("user")+"'/>";
-					document.getElementById("sscode").innerHTML = "<input type='text' disabled='disabled' name='ssc_code' value='"+getCode()+"'/>";
+					document.getElementById("sscode").innerHTML = "<input type='text' disabled='disabled' name='ssc_code' value='"+getcode()+"'/>";
 				}
 			</script>
-			SSC统一身份码：<span id="sscode"></span><br>
 		</fieldset>
 			
 			
