--- a/panel/index.html
+++ b/panel/index.html
@@ -119,7 +119,10 @@
 					document.getElementById("pswd").innerHTML = "<input type='text' disabled='disabled' name='pswd' value='******'/><input type='submit' name='view_pswd' onclick='showps()' value='显示密码'/>";
 				}
 				function showps(){
-					document.getElementById("pswd").innerHTML = "<input type='text' disabled='disabled' name='pswd' value='"+getPswd()+"'/>"
+					document.getElementById("pswd").innerHTML = "<input type='text' disabled='disabled' name='pswd' value='"+getPswd()+"'/><input type='submit' name='view_pswd' onclick='hideps()' value='隐藏密码'/>";
+				}
+				function hideps(){
+					document.getElementById("pswd").innerHTML = "<input type='text' disabled='disabled' name='pswd' value='******'/><input type='submit' name='view_pswd' onclick='showps()' value='显示密码'/>";	
 				}
 			</script>
 		</fieldset>
