--- a/panel/index.html
+++ b/panel/index.html
@@ -105,7 +105,7 @@
 			<input type="submit" class="version" value="v2.0" name="viewVersion" disabled="disabled"/>
 		</h4>
 		<hr>
-		<fieldset>
+		<fieldset class="gr">
 			<legend class="lgd_norset">基本设置</legend>
 			姓名：<span id="name"></span><br>
 			学号：<span id="stuid"></span><br>
