--- a/panel/index.html
+++ b/panel/index.html
@@ -111,6 +111,11 @@
 			学号：<span id="stuid"></span><br>
 			SSC统一身份码：<span id="sscode"></span><br>
 			密码：<span id="pswd"></span><br>
+			<strong class="gr" name="_options">
+				基本操作
+			</strong> 
+			<input type="submit" name="change_pswd" onclick="alert('对不起，服务器未能理会您的修改密码请求，请使用微信手动方式进行申请修改密码，谢谢！\n\n\n复旦二附校2024届2班申诉处')" value="修改密码"/> 
+			<input type="submit" name="change_pswd" onclick="alert('功能开发中……')" value="实名认证"/>
 			<script>
 				window.onload = function(){
 					document.getElementById("name").innerHTML = "<input type='text' disabled='disabled' name='user_name' value='"+getWelcome()+"'/>";
@@ -126,5 +131,3 @@
 				}
 			</script>
 		</fieldset>
-			
-			
