--- a/panel/index.html
+++ b/panel/index.html
@@ -145,4 +145,7 @@
 			<legend name="2FX SSC Mail" poweredby="ShzMail" support="Microsoft">
 				个人邮箱
 			</legend>
-			<span id="shzmail"></span>
+			<span id="shzmail"></span><br>
+			<copyright name="shzmail" company="ShzPlus Project" copyrightinfo="&copy;2020 Shuzhou ShzPlus Project. All rights reserved." name="copyright" id="copyright" style="gr">
+				<span style="Font-Family:'Product Sans'">Powered by <strong>ShzMail</strong></span>
+			</copyright>
