--- a/panel/index.html
+++ b/panel/index.html
@@ -149,3 +149,19 @@
 			<copyright name="shzmail" company="ShzPlus Project" copyrightinfo="&copy;2020 Shuzhou ShzPlus Project. All rights reserved." name="copyright" id="copyright" style="gr">
 				<span style="Font-Family:'Product Sans'">Powered by <strong>ShzMail</strong></span>
 			</copyright>
+		</fieldset>
+		<fieldset class="gr">
+			<legend class="gr" name="highset">
+				高级设置
+			</legend>
+			<span id="settings"></span>
+		</fieldset>
+		<hr>
+		<footer name="system_footer" class="gr" algid="CA-213213">
+			<center>
+				&copy;2020 复旦大学第二附属学校2024届2班申诉处&nbsp;&nbsp;
+				版权所有
+			</center>
+		</footer>
+	</body>
+</html>
