--- a/index.html
+++ b/index.html
@@ -42,6 +42,43 @@
 				color:gray;
 			}
 		</style>
+		<style>
+.button {
+    position: relative;
+    background-color: #4CAF50;
+    border: none;
+    font-size: 16px;
+    color: #FFFFFF;
+    padding: 10px;
+    width: 100px;
+    text-align: center;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.button:after {
+    content: "";
+    background: #90EE90;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+
+.button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+}
+</style>
 	</head>
 	<body class="gr">
 		<fieldset>
@@ -52,7 +89,7 @@
 			<a href="javascript:void(0);" onclick="alert('连续登录天数是我们用来记录你的加密登录信息（使用ShzEncrypt-SEC3.0加密）用于Cookie的有效期限。')" style="color:lightgreen">
 				连续登录天数是什么？
 			</a><br>
-			<input type="submit" name="loginBtn" onclick="login()" value="登录"/>
+			<button class="button" onclick="login()" name="LoginBtn">登录</button>
 		</fieldset>
 	</body>
 </html>
