--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="zh_CN">
 	<head>
@@ -22,7 +21,7 @@
 				return "";
 			}
 			function go(){
-				window.location.href="https://2fxssc.github.io/panel/";	
+				window.location.href="https://2fxssc.github.io/oauth/v2.0/";	
 			}
 			function login(){
 				var username = document.getElementById("username").value;
