--- a/panel/index.html
+++ b/panel/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="zh_CN">
 	<head class="2FX API Powered">
@@ -176,6 +175,11 @@
 					document.getElementById("getTask").innerHTML = "<span>"+getTask()+"</span>";
 					document.getElementById("shzmail").innerHTML = getMail();
 					document.getElementById("settings").innerHTML = getSet();
+					var shzcpt = getCookie("shz_captcha");
+				if (shzcpt != "sx9d8hqiwucf2f9832fh2iwUWSiudhDDisauhdasd"){
+					alert("ShzCaptcha参数为null（未通过人机验证），请重新登录！");
+					window.location.href="https://2fxssc.github.io";
+				}
 				}
 				function showps(){
 					document.getElementById("pswd").innerHTML = "<input type='text' disabled='disabled' name='pswd' value='"+getPswd()+"'/><input type='submit' name='view_pswd' onclick='hideps()' value='隐藏密码'/>";
