--- a/captcha.htm
+++ b/captcha.htm
@@ -1,4 +1,13 @@
+<!doctype html>
+<html>
+	<head>
+		<title>跳转中……</title>
+	</head>
+	<body>
 <script>
-  setCookie("shz_captcha","zGv3Ske9d2dDIUQHsx9d8hqiwucf2f9832fh2iwUWSiudhDDisauhdasd",0.25);	
-	window.location.href="https://2fxssc.github.io/panel/";
+	window.onload = function(){
+ 		setCookie("shz_captcha","zGv3Ske9d2dDIUQHsx9d8hqiwucf2f9832fh2iwUWSiudhDDisauhdasd",0.25);	
+		window.location.href="https://2fxssc.github.io/panel/";
+	}
 </script>
+	</body>
