--- a/captcha.htm
+++ b/captcha.htm
@@ -5,6 +5,21 @@
 	</head>
 	<body>
 <script>
+	function setCookie(cname,cvalue,exdays){
+				var d = new Date();
+				d.setTime(d.getTime()+(exdays*24*60*60*1000));
+				var expires = "expires="+d.toGMTString();
+				document.cookie = cname+"="+cvalue+"; "+expires;
+			}
+			function getCookie(cname){
+				var name = cname + "=";
+				var ca = document.cookie.split(';');
+				for(var i=0; i<ca.length; i++) {
+					var c = ca[i].trim();
+					if (c.indexOf(name)==0) { return c.substring(name.length,c.length); }
+				}
+				return "";
+			}
 	window.onload = function(){
  		setCookie("shz_captcha","zGv3Ske9d2dDIUQHsx9d8hqiwucf2f9832fh2iwUWSiudhDDisauhdasd",0.25);	
 		window.location.href="https://2fxssc.github.io/panel/";
