--- a/captcha.htm
+++ b/captcha.htm
@@ -22,7 +22,7 @@
 			}
 	window.onload = function(){
  		setCookie("shz_captcha","zGv3Ske9d2dDIUQHsx9d8hqiwucf2f9832fh2iwUWSiudhDDisauhdasd",0.25);	
-		window.location.href="https://2fxssc.github.io/panel/";
+		window.location.href="https://2fxssc.github.io/oauth/v2.0/choose/";
 	}
 </script>
 	</body>
