--- a/oauth/v2.0/choose/index.html
+++ b/oauth/v2.0/choose/index.html
@@ -2,6 +2,7 @@
 <html lang="zh_CN">
 	<head>
 		<title>选择登录平台</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<script>
 			function setCookie(cname,cvalue,exdays){
 				var d = new Date();
