--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>申诉处成员登录</title>
 		<meta charset="UTF-8"/>
+		<script data-ad-client="ca-pub-3375894906883523" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<script>
 			function setCookie(cname,cvalue,exdays){
